2008-12-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-check-button.c (hildon_check_button_init)
	(hildon_check_button_class_init, hildon_check_button_style_set)
	(hildon_check_button_apply_style):
	New "checkbox-size" style property.

	Fixes: NB#95714 (GtkCellView in HildonCheckButton should be
	larger / configurable size)

2008-12-15  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump.
	* debian/changelog: version bump

2008-12-15  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.30]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates

2008-12-12  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-pannable-area.c
	* src/hildon-program.c
	* src/hildon-time-editor.c
	* src/hildon-touch-selector-entry.c:

	More documentation updates.

2008-12-12  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-caption.c
	* src/hildon-code-dialog.c
	* src/hildon-color-button.c
	* src/hildon-controlbar.c
	* src/hildon-date-editor.c
	* src/hildon-date-selector.c
	* src/hildon-edit-toolbar.c
	* src/hildon-find-toolbar.c
	* src/hildon-font-selection-dialog.c
	* src/hildon-gtk.c
	* src/hildon-program.c
	* src/hildon-range-editor.c
	* src/hildon-seekbar.c
	* src/hildon-time-editor.c
	* src/hildon-time-selector.c
	* src/hildon-volumebar-range.c
	* src/hildon-volumebar.c
	* src/hildon-vvolumebar.c
	* src/hildon-weekday-picker.c
	* src/hildon-window.c
	* src/hildon-wizard-dialog.c:

	Lots of documentation fixes.

2008-12-12  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-check-button.c:
	* src/hildon-date-button.c:
	* src/hildon-date-selector.c:
	* src/hildon-dialog.c:
	* src/hildon-edit-toolbar.c:
	* src/hildon-entry.c:
	* src/hildon-picker-button.c:
	* src/hildon-program.c:
	* src/hildon-text-view.c:
	* src/hildon-time-button.c:
	* src/hildon-touch-selector-entry.c:
	* src/hildon-window-stack.c:
