@@ -1,3 +1,10 @@
+2008-12-16  Claudio Saavedra  <csaavedra@igalia.com>
+
+	patch by Christian Dywan (christian@imendio.com)
+
+	* src/hildon-gtk.c: (hildon_gtk_hscale_new),
+	(hildon_gtk_vscale_new): Use the appropriate GtkScale property.
+
 2008-12-15  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/hildon-check-button.c (hildon_check_button_init)
